Changed the heading

--- a/my_website/about.html
+++ b/my_website/about.html
@@ -5,9 +5,11 @@
         <title>About Greg</title>
     </head>
     <body>
+        <center>
         <a href="index.html">Home</a> 
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
+        </center>
         <h1>About Gregory</h1>
         <img src="images/gregle.jpg" height="200">
         <h2>Grade Twelve</h2>
@@ -36,10 +38,13 @@
           <li>Play Volleyball</li>
         </ul>
         <h4>Most Listened to Music</h4>
-        <ul style="list-style-type:square">
+        <ul style="list-style-type:circle">
           <li>Valerie-Amy Winehouse Acoustic</li>
           <li>I Wanna Benz-YG</li>
           <li>Hotel California-Eagles</li>
         </ul>
+        <center>
+        <img src="images/wall.jpg" height =700
+        </center>
     </body>
 </html>
