--- a/my_website/about.html
+++ b/my_website/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>About Greg</title>
+        <link rel="stylesheet" type="text/css" href="all.css">
     </head>
     <body>
         <center>
@@ -44,6 +45,7 @@
           <li>Hotel California-Eagles</li>
         </ul>
         <center>
+            <p>"If you're the smartest person in the room, you're in the wrong room."</p>
         <img src="images/wall.jpg" height =700
         </center>
     </body>
