--- a/my_website/index.html
+++ b/my_website/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+   <link rel="stylesheet" type="text/css" href="all.css">
   </head>
   <body>
+    <center>
     <a href="index.html">Home</a> 
     <a href="about.html">About</a>
     <a href="portfolio.html">Portfolio</a>
-    
+    </center>
     <h1>This is Greg's Home Page!</h1>
     <img src="images/home.jpg" height="250">
   </body>
