--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -3,11 +3,14 @@
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
+	    <link rel="stylesheet" type="text/css" href="all.css">
 	  </head>
 	  <body>
+	    <center>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="portfolio.html">Portfolio</a>
+        </center>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
