--- a/my_website/about.html
+++ b/my_website/about.html
@@ -46,7 +46,9 @@
         </ul>
         <center>
             <p>"If you're the smartest person in the room, you're in the wrong room."</p>
-        <img src="images/wall.jpg" height =700
+        <img src="images/waterbaby.jpg" height =200>
+        
+        <img src="images/waterbaby2.jpg" height =200>
         </center>
     </body>
 </html>
