--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -16,7 +16,7 @@
     <center>
     <a target="_blank" href="https://scratch.mit.edu">
     </a>
-    <a target="_blank" href="https://scratch.mit.edu/projects/128362384/"><img src="images/DRAKE GAME.JPG" height="200"> 
+    <a target="_blank" href="https://scratch.mit.edu/projects/127658353/"><img src="images/DRAKE GAME.JPG" height="200"> 
     </a>
     <a target="_blank" href="https://https://scratch.mit.edu/projects/127658353/"><img src="images/Capture.JPG" height="200"</a>
     </center>
@@ -26,5 +26,16 @@
 -Some incremental and iterative processes that were used was the random actions of the repelling drake sprite and the random placements of all the Meek Mill and Nicki Minaj sprites.<br>
 -Some difficulties were the help menu and getting the menu to appear and disappear when needed. It was resolved by inserting a “When I recieve, Hide sprites” code in all the necessary pages and a “When I recieve, Show Sprites” code.</p>
     <center><a><img src="images/waterbaby.jpg" height =175></a></center>
+<center>
+    <a target="_blank" href= "https://repl.it/FC3F/0"><img src ="images/story.png" height="200"> </a>
+    <br>Interactive Story: Good Hill Wunting</br>
+    <pre>This story is about a boy named Hill Wunting who is an undiscovered genuis that gets into a lot of trouble.
+    After being recognized for solving an impossible math equation, he is offered some help to get his life together and
+    falls in love along the way. While devloping this interactive story, I did not face many problems. It was more of the planning
+    and the process itself that took quite a bit of time. I first had to figure out what I wanted my story to even be about. After
+    deciding on a plot line, I then used basic python codes to build the interactive story. I needed to know how to define functions and even call 
+    functions. Overall, I am proud of this work because it was the first kind of interactive project that I created. If I had the chance to do this
+    again I would try to add some cool graphics or make the story more funny.</pre>
+</center>
 	  </body>
 	</html>
